Ordenes de compra de productos por cliente, herencia}